--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@apollo/client": "^3.0.0",
+    "apollo-angular": "^4.2.0",
+    "graphql": "^16",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uikit": "^3.15.22",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
