--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@apollo/client": "^3.0.0",
     "apollo-angular": "^4.2.0",
     "graphql": "^16",
+    "graphql-tag": "^2.12.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uikit": "^3.15.22",
